k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-app
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: 775698064297.dkr.ecr.eu-west-3.amazonaws.com/abdelhak/simple-app:v0.0
        ports:
        - containerPort: 8080
