k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api-v2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
